Closed
Bug 1660187
Opened 5 years ago
Closed 5 years ago
Assertion on zero-length GL version string
Categories
(Core :: Graphics, defect, P3)
Core
Graphics
Tracking
()
RESOLVED
FIXED
82 Branch
Tracking | Status | |
---|---|---|
firefox82 | --- | fixed |
People
(Reporter: hsivonen, Assigned: nical)
Details
Attachments
(1 file)
This Pernosco session shows a failure to parse a GL version out of a zero-length version string:
https://pernos.co/debug/T2SnBKzMNDY3U8jJWDR_Xg/index.html
Assertion failure: false (Failed to parse GL_VERSION), at /builds/worker/checkouts/gecko/gfx/gl/GLContext.cpp:544
It's unclear to me if this is a user-relevant problem or an artifact of what Pernosco/rr does to avoid having to record the real GPU.
Anyway, this interferes with getting Pernosco to repro problems elsewhere in the code base.
Assignee | ||
Comment 1•5 years ago
|
||
It can happen with Pernosco, getting in the way of reproducing problems elsewhere in the code base.
Updated•5 years ago
|
Assignee: nobody → nical.bugzilla
Status: NEW → ASSIGNED
Assignee | ||
Updated•5 years ago
|
Severity: -- → S3
Priority: -- → P3
Pushed by nsilva@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/9383e6be8da0
Don't assert if the GL version string is empty. r=jgilbert
Comment 3•5 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox82:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•