Bug 1660187 - Don't assert if the GL version string is empty. r=jgilbert

It can happen with Pernosco, getting in the way of reproducing problems elsewhere in the code base.

Differential Revision: https://phabricator.services.mozilla.com/D87732